@@ -1,3 +1,8 @@
+2017-10-02  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Fix getItemDetails function. This function handle Boolean type.
+
 2017-10-01  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
